--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 18
+<pre><code>## [1] 23
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3996914
+<pre><code>## [1] 0.3752363
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0  Inf    1    2    2    1    2    3    3     1     3     1   Inf
-##  [2,]  Inf    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [3,]    1  Inf    0    2    2    1    3    4    3     1     3     2   Inf
-##  [4,]    2  Inf    2    0    1    3    4    5    2     2     1     3   Inf
-##  [5,]    2  Inf    2    1    0    3    4    5    1     1     2     3   Inf
-##  [6,]    1  Inf    1    3    3    0    3    4    4     2     4     2   Inf
-##  [7,]    2  Inf    3    4    4    3    0    1    5     3     5     1   Inf
-##  [8,]    3  Inf    4    5    5    4    1    0    6     4     6     2   Inf
-##  [9,]    3  Inf    3    2    1    4    5    6    0     2     3     4   Inf
-## [10,]    1  Inf    1    2    1    2    3    4    2     0     3     2   Inf
-## [11,]    3  Inf    3    1    2    4    5    6    3     3     0     4   Inf
-## [12,]    1  Inf    2    3    3    2    1    2    4     2     4     0   Inf
-## [13,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf     0
-## [14,]    1  Inf    1    1    2    2    3    4    3     2     2     2   Inf
-## [15,]    2  Inf    2    3    2    3    4    5    1     1     4     3   Inf
+##  [1,]    0    4    1    3    2    2    4    3    1     4     1     2     1
+##  [2,]    4    0    4    1    3    3    2    2    3     3     5     2     4
+##  [3,]    1    4    0    3    2    2    4    3    1     4     2     2     2
+##  [4,]    3    1    3    0    2    2    1    1    2     2     4     1     3
+##  [5,]    2    3    2    2    0    1    3    1    1     2     3     2     1
+##  [6,]    2    3    2    2    1    0    3    2    1     3     3     1     2
+##  [7,]    4    2    4    1    3    3    0    2    3     3     5     2     4
+##  [8,]    3    2    3    1    1    2    2    0    2     1     4     2     2
+##  [9,]    1    3    1    2    1    1    3    2    0     3     2     1     2
+## [10,]    4    3    4    2    2    3    3    1    3     0     5     2     3
+## [11,]    1    5    2    4    3    3    5    4    2     5     0     3     2
+## [12,]    2    2    2    1    2    1    2    2    1     2     3     0     3
+## [13,]    1    4    2    3    1    2    4    2    2     3     2     3     0
+## [14,]    1    5    2    4    3    3    5    4    2     5     2     3     2
+## [15,]    3    3    3    2    2    2    3    1    2     1     4     1     3
 ##       [,14] [,15]
-##  [1,]     1     2
-##  [2,]   Inf   Inf
-##  [3,]     1     2
-##  [4,]     1     3
-##  [5,]     2     2
-##  [6,]     2     3
-##  [7,]     3     4
-##  [8,]     4     5
-##  [9,]     3     1
-## [10,]     2     1
+##  [1,]     1     3
+##  [2,]     5     3
+##  [3,]     2     3
+##  [4,]     4     2
+##  [5,]     3     2
+##  [6,]     3     2
+##  [7,]     5     3
+##  [8,]     4     1
+##  [9,]     2     2
+## [10,]     5     1
 ## [11,]     2     4
-## [12,]     2     3
-## [13,]   Inf   Inf
-## [14,]     0     3
-## [15,]     3     0
+## [12,]     3     1
+## [13,]     2     3
+## [14,]     0     4
+## [15,]     4     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.00000000 0.00000000 0.76724575 0.31320679 0.27429923 0.47019055
-##  [7] 0.08246148 0.02193957 0.12378823 0.59397878 0.08333129 0.28799795
-## [13] 0.00000000 0.81958023 0.19096793
+<pre><code>##  [1] 0.6440880 0.1688121 0.4577701 0.6058282 0.8872298 0.7586243 0.1688121
+##  [8] 1.0000000 0.9987447 0.4567048 0.2488005 0.8365554 0.4266968 0.1794731
+## [15] 0.6390096
 </code></pre>
 
   </article>
