--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 16
+<pre><code>## [1] 25
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3066406
+<pre><code>## [1] 0.3016
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    1    2  Inf    1  Inf  Inf    3    4     2     2     1     3
-##  [2,]    1    0    1  Inf    2  Inf  Inf    2    4     2     1     2     3
-##  [3,]    2    1    0  Inf    2  Inf  Inf    2    3     1     2     3     2
-##  [4,]  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [5,]    1    2    2  Inf    0  Inf  Inf    2    3     1     2     2     2
-##  [6,]  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
-##  [8,]    3    2    2  Inf    2  Inf  Inf    0    2     1     1     4     1
-##  [9,]    4    4    3  Inf    3  Inf  Inf    2    0     2     3     5     1
-## [10,]    2    2    1  Inf    1  Inf  Inf    1    2     0     1     3     1
-## [11,]    2    1    2  Inf    2  Inf  Inf    1    3     1     0     3     2
-## [12,]    1    2    3  Inf    2  Inf  Inf    4    5     3     3     0     4
-## [13,]    3    3    2  Inf    2  Inf  Inf    1    1     1     2     4     0
-## [14,]    4    3    3  Inf    3  Inf  Inf    1    2     2     2     5     1
-## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [1,]    0    3    3    3    2    4    3    1    3     1     2     5     2
+##  [2,]    3    0    2    1    2    1    1    2    1     3     1     2     2
+##  [3,]    3    2    0    1    2    1    2    2    3     3     1     2     3
+##  [4,]    3    1    1    0    1    2    2    2    2     2     1     3     3
+##  [5,]    2    2    2    1    0    3    3    3    3     1     2     4     2
+##  [6,]    4    1    1    2    3    0    2    3    2     4     2     3     3
+##  [7,]    3    1    2    2    3    2    0    2    2     2     1     2     1
+##  [8,]    1    2    2    2    3    3    2    0    3     2     1     4     3
+##  [9,]    3    1    3    2    3    2    2    3    0     2     2     3     1
+## [10,]    1    3    3    2    1    4    2    2    2     0     3     4     1
+## [11,]    2    1    1    1    2    2    1    1    2     3     0     3     2
+## [12,]    5    2    2    3    4    3    2    4    3     4     3     0     3
+## [13,]    2    2    3    3    2    3    1    3    1     1     2     3     0
+## [14,]    4    1    3    2    3    2    1    3    2     3     2     1     2
+## [15,]    4    3    1    2    3    2    3    3    4     4     2     1     4
 ##       [,14] [,15]
-##  [1,]     4   Inf
-##  [2,]     3   Inf
-##  [3,]     3   Inf
-##  [4,]   Inf   Inf
-##  [5,]     3   Inf
-##  [6,]   Inf   Inf
-##  [7,]   Inf   Inf
-##  [8,]     1   Inf
-##  [9,]     2   Inf
-## [10,]     2   Inf
-## [11,]     2   Inf
-## [12,]     5   Inf
-## [13,]     1   Inf
-## [14,]     0   Inf
-## [15,]   Inf     0
+##  [1,]     4     4
+##  [2,]     1     3
+##  [3,]     3     1
+##  [4,]     2     2
+##  [5,]     3     3
+##  [6,]     2     2
+##  [7,]     1     3
+##  [8,]     3     3
+##  [9,]     2     4
+## [10,]     3     4
+## [11,]     2     2
+## [12,]     1     1
+## [13,]     2     4
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.19367829 0.31137626 0.36443569 0.00000000 0.33172704 0.00000000
-##  [7] 0.00000000 0.71211430 0.17445747 1.00000000 0.56233455 0.05382382
-## [13] 0.62776340 0.37235633 0.00000000
+<pre><code>##  [1] 0.1485545 1.0000000 0.4498693 0.5863144 0.1936493 0.3610856 0.6035506
+##  [8] 0.2139981 0.3180721 0.1912470 0.7107134 0.1453987 0.2771568 0.4355705
+## [15] 0.1482497
 </code></pre>
 
   </article>
