--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 25
+<pre><code>## [1] 23
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3016
+<pre><code>## [1] 0.4281663
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    3    3    2    4    3    1    3     1     2     5     2
-##  [2,]    3    0    2    1    2    1    1    2    1     3     1     2     2
-##  [3,]    3    2    0    1    2    1    2    2    3     3     1     2     3
-##  [4,]    3    1    1    0    1    2    2    2    2     2     1     3     3
-##  [5,]    2    2    2    1    0    3    3    3    3     1     2     4     2
-##  [6,]    4    1    1    2    3    0    2    3    2     4     2     3     3
-##  [7,]    3    1    2    2    3    2    0    2    2     2     1     2     1
-##  [8,]    1    2    2    2    3    3    2    0    3     2     1     4     3
-##  [9,]    3    1    3    2    3    2    2    3    0     2     2     3     1
-## [10,]    1    3    3    2    1    4    2    2    2     0     3     4     1
-## [11,]    2    1    1    1    2    2    1    1    2     3     0     3     2
-## [12,]    5    2    2    3    4    3    2    4    3     4     3     0     3
-## [13,]    2    2    3    3    2    3    1    3    1     1     2     3     0
-## [14,]    4    1    3    2    3    2    1    3    2     3     2     1     2
-## [15,]    4    3    1    2    3    2    3    3    4     4     2     1     4
+##  [1,]    0    5    4    2    4    3    4    3    2     3     5     3     3
+##  [2,]    5    0    3    4    1    4    1    5    3     4     2     2     4
+##  [3,]    4    3    0    3    2    3    2    4    2     1     3     1     2
+##  [4,]    2    4    3    0    3    2    3    1    1     3     4     2     3
+##  [5,]    4    1    2    3    0    3    2    4    2     3     1     1     3
+##  [6,]    3    4    3    2    3    0    3    1    3     2     4     2     2
+##  [7,]    4    1    2    3    2    3    0    4    2     3     3     1     3
+##  [8,]    3    5    4    1    4    1    4    0    2     3     5     3     3
+##  [9,]    2    3    2    1    2    3    2    2    0     3     3     1     3
+## [10,]    3    4    1    3    3    2    3    3    3     0     4     2     1
+## [11,]    5    2    3    4    1    4    3    5    3     4     0     2     4
+## [12,]    3    2    1    2    1    2    1    3    1     2     2     0     2
+## [13,]    3    4    2    3    3    2    3    3    3     1     4     2     0
+## [14,]    2    3    2    2    2    1    2    2    2     1     3     1     1
+## [15,]    1    4    3    1    3    2    3    2    1     2     4     2     2
 ##       [,14] [,15]
-##  [1,]     4     4
-##  [2,]     1     3
-##  [3,]     3     1
-##  [4,]     2     2
-##  [5,]     3     3
-##  [6,]     2     2
-##  [7,]     1     3
-##  [8,]     3     3
-##  [9,]     2     4
-## [10,]     3     4
-## [11,]     2     2
-## [12,]     1     1
-## [13,]     2     4
-## [14,]     0     2
-## [15,]     2     0
+##  [1,]     2     1
+##  [2,]     3     4
+##  [3,]     2     3
+##  [4,]     2     1
+##  [5,]     2     3
+##  [6,]     1     2
+##  [7,]     2     3
+##  [8,]     2     2
+##  [9,]     2     1
+## [10,]     1     2
+## [11,]     3     4
+## [12,]     1     2
+## [13,]     1     2
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.1485545 1.0000000 0.4498693 0.5863144 0.1936493 0.3610856 0.6035506
-##  [8] 0.2139981 0.3180721 0.1912470 0.7107134 0.1453987 0.2771568 0.4355705
-## [15] 0.1482497
+<pre><code>##  [1] 0.1504854 0.4081629 0.6880084 0.5102288 0.5436349 0.3061050 0.3892631
+##  [8] 0.3667061 0.5679630 0.4888770 0.1502788 1.0000000 0.3398771 0.7406315
+## [15] 0.5443825
 </code></pre>
 
   </article>
