--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 26
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2344674
+<pre><code>## [1] 0.4322917
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    1    2    1    3    2    2    2     2     3     1     2
-##  [2,]    3    0    3    3    2    2    1    3    2     3     3     2     3
-##  [3,]    1    3    0    2    2    3    2    2    3     2     3     1     3
-##  [4,]    2    3    2    0    1    2    2    2    2     1     1     1     2
-##  [5,]    1    2    2    1    0    2    2    2    1     2     2     2     1
-##  [6,]    3    2    3    2    2    0    2    2    1     3     1     2     3
-##  [7,]    2    1    2    2    2    2    0    2    1     2     3     1     3
-##  [8,]    2    3    2    2    2    2    2    0    1     2     3     1     3
-##  [9,]    2    2    3    2    1    1    1    1    0     3     2     2     2
-## [10,]    2    3    2    1    2    3    2    2    3     0     2     1     3
-## [11,]    3    3    3    1    2    1    3    3    2     2     0     2     3
-## [12,]    1    2    1    1    2    2    1    1    2     1     2     0     3
-## [13,]    2    3    3    2    1    3    3    3    2     3     3     3     0
-## [14,]    1    3    2    3    2    2    2    2    1     3     3     2     3
-## [15,]    2    1    2    2    1    1    2    2    2     2     2     1     2
+##  [1,]    0    2    3    2    2    3    3    1    3     4     3     2     2
+##  [2,]    2    0    3    2    4    1    1    3    3     4     3     2     2
+##  [3,]    3    3    0    1    3    4    3    4    1     2     2     1     2
+##  [4,]    2    2    1    0    4    3    3    3    2     3     3     2     2
+##  [5,]    2    4    3    4    0    5    5    1    4     5     1     2     4
+##  [6,]    3    1    4    3    5    0    1    4    3     4     4     3     2
+##  [7,]    3    1    3    3    5    1    0    4    2     3     4     3     1
+##  [8,]    1    3    4    3    1    4    4    0    4     5     2     3     3
+##  [9,]    3    3    1    2    4    3    2    4    0     1     3     2     1
+## [10,]    4    4    2    3    5    4    3    5    1     0     4     3     2
+## [11,]    3    3    2    3    1    4    4    2    3     4     0     1     3
+## [12,]    2    2    1    2    2    3    3    3    2     3     1     0     2
+## [13,]    2    2    2    2    4    2    1    3    1     2     3     2     0
+## [14,]    3    5    4    5    1    6    6    2    5     6     2     3     5
+## [15,]    1    1    2    1    3    2    2    2    2     3     2     1     1
 ##       [,14] [,15]
-##  [1,]     1     2
-##  [2,]     3     1
-##  [3,]     2     2
-##  [4,]     3     2
-##  [5,]     2     1
-##  [6,]     2     1
-##  [7,]     2     2
+##  [1,]     3     1
+##  [2,]     5     1
+##  [3,]     4     2
+##  [4,]     5     1
+##  [5,]     1     3
+##  [6,]     6     2
+##  [7,]     6     2
 ##  [8,]     2     2
-##  [9,]     1     2
-## [10,]     3     2
-## [11,]     3     2
-## [12,]     2     1
-## [13,]     3     2
-## [14,]     0     3
-## [15,]     3     0
+##  [9,]     5     2
+## [10,]     6     3
+## [11,]     2     2
+## [12,]     3     1
+## [13,]     5     1
+## [14,]     0     4
+## [15,]     4     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.4859417 0.1986873 0.3528124 0.5916914 0.4853416 0.2495385 0.3777188
-##  [8] 0.3305437 0.3921527 0.8069518 0.1997362 1.0000000 0.1152364 0.2084890
-## [15] 0.4590937
+<pre><code>##  [1] 0.28302344 1.00000000 0.44568259 0.48363501 0.06963759 0.67145597
+##  [7] 0.56484106 0.12506508 0.33607478 0.17596367 0.12270738 0.39908254
+## [13] 0.48613530 0.01823059 0.95603357
 </code></pre>
 
   </article>
