--- a/cours4/index.html
+++ b/cours4/index.html
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3202663
+<pre><code>## [1] 0.2877219
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    3    3    3    3    2    1    2     4     1     3     2
-##  [2,]    2    0    2    1    2    3    2    1    4     2     3     1     2
-##  [3,]    3    2    0    1    3    3    2    3    2     1     2     2     4
-##  [4,]    3    1    1    0    3    4    3    2    3     2     3     2     3
-##  [5,]    3    2    3    3    0    1    1    2    2     2     3     1     1
-##  [6,]    3    3    3    4    1    0    2    3    1     3     2     2     2
-##  [7,]    2    2    2    3    1    2    0    1    2     3     2     2     2
-##  [8,]    1    1    3    2    2    3    1    0    3     3     2     2     1
-##  [9,]    2    4    2    3    2    1    2    3    0     3     1     3     3
-## [10,]    4    2    1    2    2    3    3    3    3     0     3     1     3
-## [11,]    1    3    2    3    3    2    2    2    1     3     0     3     3
-## [12,]    3    1    2    2    1    2    2    2    3     1     3     0     2
-## [13,]    2    2    4    3    1    2    2    1    3     3     3     2     0
-## [14,]    3    2    2    3    2    3    2    3    2     2     2     1     3
-## [15,]    2    3    1    2    2    2    1    2    1     2     1     2     3
+##  [1,]    0  Inf    1    2    3    2    1    1    2     1     2     3     2
+##  [2,]  Inf    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [3,]    1  Inf    0    2    4    3    2    1    1     2     1     2     3
+##  [4,]    2  Inf    2    0    5    1    1    2    2     2     1     2     4
+##  [5,]    3  Inf    4    5    0    5    4    3    5     4     4     5     1
+##  [6,]    2  Inf    3    1    5    0    2    3    3     3     2     1     4
+##  [7,]    1  Inf    2    1    4    2    0    1    1     1     2     3     3
+##  [8,]    1  Inf    1    2    3    3    1    0    2     1     1     2     2
+##  [9,]    2  Inf    1    2    5    3    1    2    0     2     1     2     4
+## [10,]    1  Inf    2    2    4    3    1    1    2     0     2     3     3
+## [11,]    2  Inf    1    1    4    2    2    1    1     2     0     1     3
+## [12,]    3  Inf    2    2    5    1    3    2    2     3     1     0     4
+## [13,]    2  Inf    3    4    1    4    3    2    4     3     3     4     0
+## [14,]    1  Inf    2    3    2    3    2    1    3     2     2     3     1
+## [15,]    1  Inf    2    2    4    1    2    2    3     2     3     2     3
 ##       [,14] [,15]
-##  [1,]     3     2
-##  [2,]     2     3
-##  [3,]     2     1
+##  [1,]     1     1
+##  [2,]   Inf   Inf
+##  [3,]     2     2
 ##  [4,]     3     2
-##  [5,]     2     2
-##  [6,]     3     2
-##  [7,]     2     1
-##  [8,]     3     2
-##  [9,]     2     1
+##  [5,]     2     4
+##  [6,]     3     1
+##  [7,]     2     2
+##  [8,]     1     2
+##  [9,]     3     3
 ## [10,]     2     2
-## [11,]     2     1
-## [12,]     1     2
-## [13,]     3     3
-## [14,]     0     1
-## [15,]     1     0
+## [11,]     2     3
+## [12,]     3     2
+## [13,]     1     3
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.1869841 1.0000000 0.3637699 0.5010129 0.4433955 0.1761994 0.3558239
-##  [8] 0.4812525 0.2124230 0.4532103 0.2147069 0.8698799 0.2484260 0.3411093
-## [15] 0.3997375
+<pre><code>##  [1] 8.897724e-01 2.840336e-17 7.514671e-01 5.850005e-01 2.464665e-02
+##  [6] 2.986373e-01 8.278167e-01 1.000000e+00 5.549970e-01 6.169082e-01
+## [11] 8.655754e-01 4.607735e-01 1.085728e-01 4.536358e-01 2.697758e-01
 </code></pre>
 
   </article>
