--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 26
+<pre><code>## [1] 18
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2877219
+<pre><code>## [1] 0.3873457
 </code></pre>
 
   </article>
@@ -1134,35 +1134,35 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0  Inf    1    2    3    2    1    1    2     1     2     3     2
-##  [2,]  Inf    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [3,]    1  Inf    0    2    4    3    2    1    1     2     1     2     3
-##  [4,]    2  Inf    2    0    5    1    1    2    2     2     1     2     4
-##  [5,]    3  Inf    4    5    0    5    4    3    5     4     4     5     1
-##  [6,]    2  Inf    3    1    5    0    2    3    3     3     2     1     4
-##  [7,]    1  Inf    2    1    4    2    0    1    1     1     2     3     3
-##  [8,]    1  Inf    1    2    3    3    1    0    2     1     1     2     2
-##  [9,]    2  Inf    1    2    5    3    1    2    0     2     1     2     4
-## [10,]    1  Inf    2    2    4    3    1    1    2     0     2     3     3
-## [11,]    2  Inf    1    1    4    2    2    1    1     2     0     1     3
-## [12,]    3  Inf    2    2    5    1    3    2    2     3     1     0     4
-## [13,]    2  Inf    3    4    1    4    3    2    4     3     3     4     0
-## [14,]    1  Inf    2    3    2    3    2    1    3     2     2     3     1
-## [15,]    1  Inf    2    2    4    1    2    2    3     2     3     2     3
+##  [1,]    0    3    2    2    3    2    1    1  Inf     2     3     1     2
+##  [2,]    3    0    3    4    5    2    2    3  Inf     1     5     2     1
+##  [3,]    2    3    0    2    3    2    1    1  Inf     3     3     3     2
+##  [4,]    2    4    2    0    1    2    3    1  Inf     3     1     3     4
+##  [5,]    3    5    3    1    0    3    4    2  Inf     4     2     4     5
+##  [6,]    2    2    2    2    3    0    3    1  Inf     1     3     2     3
+##  [7,]    1    2    1    3    4    3    0    2  Inf     3     4     2     1
+##  [8,]    1    3    1    1    2    1    2    0  Inf     2     2     2     3
+##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
+## [10,]    2    1    3    3    4    1    3    2  Inf     0     4     1     2
+## [11,]    3    5    3    1    2    3    4    2  Inf     4     0     4     5
+## [12,]    1    2    3    3    4    2    2    2  Inf     1     4     0     3
+## [13,]    2    1    2    4    5    3    1    3  Inf     2     5     3     0
+## [14,]    3    2    3    3    4    1    4    2  Inf     1     4     2     3
+## [15,]    3    2    3    4    5    2    2    3  Inf     1     5     2     1
 ##       [,14] [,15]
-##  [1,]     1     1
-##  [2,]   Inf   Inf
-##  [3,]     2     2
-##  [4,]     3     2
-##  [5,]     2     4
-##  [6,]     3     1
-##  [7,]     2     2
-##  [8,]     1     2
-##  [9,]     3     3
-## [10,]     2     2
-## [11,]     2     3
-## [12,]     3     2
-## [13,]     1     3
+##  [1,]     3     3
+##  [2,]     2     2
+##  [3,]     3     3
+##  [4,]     3     4
+##  [5,]     4     5
+##  [6,]     1     2
+##  [7,]     4     2
+##  [8,]     2     3
+##  [9,]   Inf   Inf
+## [10,]     1     1
+## [11,]     4     5
+## [12,]     2     2
+## [13,]     3     1
 ## [14,]     0     2
 ## [15,]     2     0
 </code></pre>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 8.897724e-01 2.840336e-17 7.514671e-01 5.850005e-01 2.464665e-02
-##  [6] 2.986373e-01 8.278167e-01 1.000000e+00 5.549970e-01 6.169082e-01
-## [11] 8.655754e-01 4.607735e-01 1.085728e-01 4.536358e-01 2.697758e-01
+<pre><code>##  [1] 0.6011647 0.5154188 0.4182311 0.3134140 0.1059369 0.7835831 0.5219748
+##  [8] 0.7153607 0.0000000 1.0000000 0.1059369 0.5412088 0.5248652 0.6028679
+## [15] 0.5154188
 </code></pre>
 
   </article>
